--- a/src/AuthenticationBundle/Resources/views/Default/form.html.twig
+++ b/src/AuthenticationBundle/Resources/views/Default/form.html.twig
@@ -1,7 +1,11 @@
-<form>
-	<input type="text" name="action" value="">
-	<h3>
-		<label for="loginName">Username or email</label>
-	</h3>
-	<input type="submit" value="Submit">
+<form id="formulario">
+	<div class="mb-3">
+		<label for="exampleInputEmail1" class="form-label">Email address</label>
+		<input type="email" class="form-control" id="exampleInputEmail1" name="email">
+	</div>
+	<div class="mb-3">
+		<label for="exampleInputPassword1" class="form-label">Password</label>
+		<input type="password" class="form-control" id="exampleInputPassword1" name="password">
+	</div>
+	<a class="btn btn-primary" id="btn_to_login">Validar</a>
 </form>
